# decade

./: .appveyor.yml  .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  AGENTS.md  AUTHORS.txt  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  test.xml  vcpkg.json
.claude/: settings.json
.forgejo/workflows/: build.yml
.github/workflows/: cmake.yml  cmake.yml.disable
build-debug/resources/: csv2_copyright_LICENSE.cpp  csv2mio_LICENSE_LICENSE.mio.cpp  decade_LICENSE.txt.cpp  embed_resource_LICENSE_LICENSE.txt.cpp  shader_font_fragment_shader.glsl.cpp  shader_font_vertex_shader.glsl.cpp  shader_phong_fragment_shader.glsl.cpp  shader_phong_vertex_shader.glsl.cpp  shader_rectangles_fragment_shader.glsl.cpp  shader_rectangles_vertex_shader.glsl.cpp  shader_simple_fragment_shader.glsl.cpp  shader_simple_vertex_shader.glsl.cpp  sigslot_LICENSE_LICENSE.cpp
docs/: ARCHITECTURE.md
example_input/: dates.csv
examples/: sample_dates.csv  test_dates_2.csv  test_dates_3.csv  test_dates_4.csv
shaders/: basic_fragment_shader.glsl  font_fragment_shader.glsl  font_vertex_shader.glsl  phong_fragment_shader.glsl  phong_vertex_shader.glsl  rectangles_fragment_shader.glsl  rectangles_vertex_shader.glsl  simple_fragment_shader.glsl  simple_vertex_shader.glsl
src/: calendar_config.cpp  calendar_config.h  calendar_page.cpp  calendar_page.h  calendar_page.hpp  calendar_view.h  casts.h  casts.hpp  date_convert.cpp  date_convert.h  date_group_store.cpp  date_group_store.h  date_store.h  date_utils.cpp  date_utils.h  date_utils.hpp  dates_storage.cpp  dates_storage.h  dates_store.cpp  dates_store.h  frame_layout.hpp  group_store.h  log_stream.cpp  log_stream.hpp  main.cpp  main.h  main_window.h  main_window.hpp  page_config.h  shape_config.cpp  shape_config.h  title_config.h  wx_widgets_include.hpp  wx_widgets_include.hpp.outdated
src/app/: app_config.hpp  decade_app.cpp  decade_app.hpp  main.cpp  main_window.cpp  main_window.hpp  runtime_info.hpp  runtime_options.hpp
src/app/binding/: calendar_layout.hpp  calendar_page.hpp  calendar_scene_builder.hpp  calendar_scene_composer.hpp  calendar_scene_nodes.hpp  calendar_section_builders.hpp  event_bus.hpp  interaction_controller.hpp  main_window_binder.hpp  scene_highlighter.hpp  scene_snapshot.hpp  scene_snapshot_builder.hpp
src/app/services/: csv_io.hpp  project_io.cpp  project_io.hpp  value_serialization.hpp
src/application/: app_config.hpp  decade_app.hpp  event_bus.hpp  locale_services.hpp  main_window.hpp  main_window_binder.hpp  runtime_info.hpp  runtime_options.hpp
src/application/calendar/: calendar_layout.hpp  calendar_page.hpp  calendar_scene_composer.hpp  calendar_scene_nodes.hpp  calendar_section_builders.hpp  interaction_controller.hpp  scene_highlighter.hpp  scene_snapshot_builder.hpp
src/domain/: calendar_config.hpp  calendar_config_store.hpp  date.hpp  date_entry.hpp  date_entry_bar_store.hpp  date_entry_store.hpp  date_group.hpp  date_group_store.hpp  date_period.hpp  page_setup_store.hpp  scene_snapshot.hpp  shape_configuration_store.hpp  title_config.hpp  title_config_store.hpp  transform_date_entry.hpp
src/domain/detail/: icu_date_backend.hpp  reentry_guard.hpp
src/graphics/: RenderToTexture.cpp  RenderToTexture.h  debug_log.hpp  font.cpp  font.h  font.hpp  frame_layout.hpp  frame_stats.hpp  freetype.hpp  graphic_engine.cpp  graphic_engine.h  graphics_engine.hpp  mvp_matrices.hpp  pan_zoom_camera.hpp  pick_id.hpp  png_writer.hpp  projection.cpp  projection.h  projection.hpp  rect.hpp  rect4.cpp  rect4.h  render_to_png.hpp  render_to_texture.hpp  scene.hpp  scene_graph.hpp  scene_shape_filler.hpp  shaders.cpp  shaders.h  shaders.hpp  shaders_info.hpp  shapes.cpp  shapes.h  shapes.hpp  shapes_base.cpp  shapes_base.h  shapes_base.hpp  texture_object.cpp  texture_object.h  texture_object.hpp
src/graphics_engine/: font.h  graphics_engine.h  projection.h  rect4.h  render_to_texture.h  shaders.h  shapes.h  shapes_base.h  texture_object.h
src/gui/: calendar_panel.h  calendar_panel.hpp  calendar_setup.cpp  calendar_setup.h  casts.hpp  data_table.cpp  data_table.h  date_groups_table.cpp  date_groups_table.h  date_panel.h  date_panel.hpp  date_table.cpp  date_table.h  date_table_panel.cpp  date_table_panel.h  document_panel.hpp  elements_setup.cpp  elements_setup.h  font_panel.h  font_panel.hpp  font_setup.cpp  font_setup.h  gl_canvas.cpp  gl_canvas.h  groups_panel.h  groups_panel.hpp  license_info.cpp  license_info.h  license_info_dialog.h  license_panel.h  license_panel.hpp  log_panel.h  log_panel.hpp  main_menu.hpp  main_window.h  main_window.hpp  mouse_interaction.hpp  opengl_panel.h  opengl_panel.hpp  page_panel.h  (+20 more)
src/physics/: physics_world.hpp
src/presentation/: document_panel.hpp  font_panel.hpp  gl_canvas.hpp  groups_panel.hpp  license_panel.hpp  mouse_interaction.hpp  opengl_panel.hpp  rgba_colour_property.hpp  scene_tree_panel.hpp  title_panel.hpp  wx_owned.hpp
src/signal_packages/: date_store.h  page_config.h  shape_config.h  title_config.h
test-files/: test_dates_first_line_empty.csv  test_dates_lines_empty.csv  test_dates_not_well_formed.csv
tests/: CMakeLists.txt
tests/app/: test_calendar_layout.cpp
tests/application/calendar/: test_calendar_layout.cpp
tests/domain/: test_calendar_config.cpp  test_date.cpp  test_date_entry_store.cpp  test_date_format.cpp  test_date_group_store.cpp  test_date_period.cpp  test_page_setup_store.cpp  test_reentry_guard.cpp  test_shape_configuration_store.cpp  test_timeline_projection.cpp  test_title_config_store.cpp  test_transform_date_entry.cpp
tests/graphics/: test_frame_stats.cpp  test_pan_zoom_camera.cpp
tests/infrastructure/graphics/: test_frame_stats.cpp  test_pan_zoom_camera.cpp
tests/infrastructure/persistence/: test_csv_io.cpp  test_project_io.cpp  test_value_serialization.cpp
tests/infrastructure/physics/: test_physics_world.cpp
tests/physics/: test_physics_world.cpp
tests/services/: test_csv_io.cpp  test_value_serialization.cpp
(+17 files in other folders)
